OpenAPI fix
