# model/event.go
@@ -1,14 +1,39 @@
 package model
 
-// swagger:parameters EventParam
-
 // Event description object
+//
+// swagger:parameters EventCreate
 type Event struct {
-	// Body of an event object.
-	// in:body
-	// out:body
-	ID          int64  `db:"id" json:"id"`
-	Owner       int64  `db:"owner" json:"owner"`
-	Name        string `db:"name" json:"name"`
+	// Identifier generated by the storage TODO: remove
+	ID int64 `db:"id" json:"id"`
+
+	// Number of the owner of the event
+	//
+	// required: true
+	Owner int64 `db:"owner" json:"owner"`
+
+	// Desired event name
+	//
+	// required: true
+	Name string `db:"name" json:"name"`
+
+	// More detailed description of the event
+	Description string `db:"description" json:"description"`
+}
+
+// EventResponse description object response
+//
+// swagger:response EventResponse
+type EventResponse struct {
+	// Identifier generated by the storage
+	ID int64 `db:"id" json:"id"`
+
+	// Number of the owner of the event
+	Owner int64 `db:"owner" json:"owner"`
+
+	// Desired event name
+	Name string `db:"name" json:"name"`
+
+	// More detailed description of the event
 	Description string `db:"description" json:"description"`
 }
