# swagger.json
@@ -34,10 +34,44 @@
           "event"
         ],
         "summary": "Creates a new event.",
-        "operationId": "EventParam",
+        "operationId": "EventCreate",
+        "parameters": [
+          {
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "ID",
+            "description": "Identifier generated by the storage TODO: remove",
+            "name": "id",
+            "in": "query"
+          },
+          {
+            "type": "integer",
+            "format": "int64",
+            "x-go-name": "Owner",
+            "description": "Number of the owner of the event",
+            "name": "owner",
+            "in": "query",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Name",
+            "description": "Desired event name",
+            "name": "name",
+            "in": "query",
+            "required": true
+          },
+          {
+            "type": "string",
+            "x-go-name": "Description",
+            "description": "More detailed description of the event",
+            "name": "description",
+            "in": "query"
+          }
+        ],
         "responses": {
           "201": {
-            "$ref": "#/responses/Created"
+            "$ref": "#/responses/EventResponse"
           },
           "400": {
             "description": "Request",
@@ -47,6 +81,31 @@
             "description": "Server Error",
             "$ref": "#/responses/Internal"
           }
+        }
+      }
+    }
+  },
+  "responses": {
+    "EventResponse": {
+      "description": "EventResponse description object response",
+      "headers": {
+        "description": {
+          "type": "string",
+          "description": "More detailed description of the event"
+        },
+        "id": {
+          "type": "integer",
+          "format": "int64",
+          "description": "Identifier generated by the storage"
+        },
+        "name": {
+          "type": "string",
+          "description": "Desired event name"
+        },
+        "owner": {
+          "type": "integer",
+          "format": "int64",
+          "description": "Number of the owner of the event"
         }
       }
     }
